# loxodrome

./: .gitignore  AGENTS.md  LICENSE  Makefile  PROMPTS.txt  README.md
.github/: dependabot.yml
.github/matchers/: mypy.json
.github/scripts/: bump_version.py  check_manifest_versions.py  determine_release_version.py  remove_stale_extensions.py
.github/workflows/: ci.yml  release.yml
docs/: STYLE-GUIDE.md  publishing.md  style-guide.md
docs/specs/: 2025-11-19_3d-geometry-support.md  2025-11-19_github-actions-ci.md  2025-11-19_pyo3-integration-plan.md  2025-11-19_python-package-structure.md  2025-11-19_rust-mvp-algorithm.md  README.md  _TEMPLATE.md
docs/specs/accepted/: 2025-11-19_3d-geometry-support.md  2025-11-19_pyo3-integration-plan.md  2025-11-19_python-package-structure.md  2025-11-19_rust-mvp-algorithm.md  2025-11-20_ci-publishing-dry-run.md  2025-11-20_ellipsoidal-geodesic-upgrade.md  2025-11-20_witness-points-hausdorff.md
docs/specs/proposed/: 2025-11-19_3d-geometry-support.md  2025-11-19_pyo3-integration-plan.md  2025-11-19_python-package-structure.md  2025-11-19_witness-points-hausdorff.md  2025-11-20_ci-publishing-dry-run.md  2025-11-20_ellipsoidal-geodesic-upgrade.md  2025-11-20_geometry-distance-metrics.md  2025-11-20_python-vectorization.md  2025-11-24_ecef-interop-and-conversions.md  2025-11-24_loxodrome-mvp-roadmap.md  2025_11_20_geometric-golden-testing.md
experiments/: README.md  pyproject.toml  routes.example.json
experiments/notebooks/: geodist_usage.ipynb  loxodrome_usage.ipynb  vectorized_batches.ipynb
experiments/src/experiments/: __init__.py  bench_pure.py  bench_vectorized.py  viz.py
geodist-rs/: Cargo.toml  Makefile
geodist-rs/benches/: densification.rs  distance.rs
geodist-rs/src/: constants.rs  distance.rs  hausdorff.rs  lib.rs  polygon.rs  polyline.rs  python.rs  types.rs
geodist-rs/src/algorithms/: spherical.rs
loxodrome/: Makefile  pyproject.toml  ruff.toml
loxodrome-rs/: Cargo.toml
loxodrome/tests/: test_bindings_polyline.py  test_cli.py  test_ext_shapely.py  test_geodesic_references.py  test_geometry.py  test_ops.py  test_vectorized.py
pygeodist/: Makefile  README.md  pyproject.toml  ruff.toml
pygeodist/geodist-rs/: clippy.toml
pygeodist/notebooks/: geodist_usage.ipynb  web_mapping_lane_examples.ipynb
pygeodist/src/geodist/: __init__.py  _geodist_rs.pyi  cli.py  geometry.py  io.py  ops.py  pure.py  types.py  vectorized.py
pygeodist/src/geodist/ext/: shapely.py
pygeodist/tests/: test_bindings_errors.py  test_bindings_polyline.py  test_cli.py  test_ext_shapely.py  test_geodesic_references.py  test_geometry.py  test_io.py  test_ops.py  test_pure.py  test_python_surface.py  test_vectorized.py
