[package]
name = "geodist-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
python = ["pyo3/extension-module"]
bench = ["criterion"]

[dependencies]
criterion = { version = "0.7.0", optional = true }
geographiclib-rs = "0.2.5"
pyo3 = { version = "0.27.1", optional = true }
rstar = "0.12"

[[bench]]
name = "distance"
harness = false
required-features = ["bench"]
