[project]
name = "pygeodist"
description = "Fast geometric distance algorithms with Rust performance and Python usability."
authors = [
    { name="Edward Jones", email="e@eddie.land" },
]
readme = "README.md"
license = "MIT"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = []

[project.scripts]
geodist = "geodist.cli:app"

[project.urls]
Repository = "https://github.com/eddieland/geodist"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "funlog>=0.2.1",
    "maturin>=1.10,<1.11",
    "mypy>=1.14.1",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "ruff>=0.11.9",
    "typer>=0.15.0",
]

# ---- Build system ----

[build-system]
requires = ["maturin>=1.10,<1.11"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../geodist-rs/Cargo.toml"
features = ["python"]
module-name = "geodist._geodist_rs"
python-source = "src"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
color_output = true
error_summary = true
pretty = true
show_error_codes = true
warn_unused_configs = true
